# 2023AlCompetition

./: build_run.py  gmapping.sh  shoot.sh
robot_ws/: .clang-format
robot_ws/devel/: .catkin  .rosinstall  local_setup.sh
robot_ws/devel/lib/abot_bringup/: abot_driver
robot_ws/devel/lib/abot_imu/: abot_imu
robot_ws/devel/lib/abot_tool_pkg/: lidar_dist
robot_ws/devel/lib/pkgconfig/: abot_bringup.pc  abot_imu.pc  abot_model.pc  abot_tool_pkg.pc  lidar_filters.pc  robot_shoot.pc  robot_slam.pc  track_tag.pc
robot_ws/devel/lib/robot_shoot/: nav_shoot  nav_shoot_debug
robot_ws/devel/share/abot_bringup/cmake/: abot_bringupConfig.cmake
robot_ws/devel/share/abot_imu/cmake/: abot_imu-msg-extras.cmake  abot_imu-msg-paths.cmake  (+1 more)
robot_ws/src/abot_bringup/scripts/: shoot.py
robot_ws/src/abot_bringup/src/: base_driver.cpp
robot_ws/src/abot_tool_pkg/: CMakeLists.txt  package.xml
robot_ws/src/abot_tool_pkg/src/: lidar_dist.cpp
robot_ws/src/robot_shoot/: CMakeLists.txt
robot_ws/src/robot_shoot/config/: config.yaml
robot_ws/src/robot_shoot/include/nav_shoot/: nav_shoot.hpp  nav_utils.hpp  robot_task.hpp
robot_ws/src/robot_shoot/launch/: nav_shoot.launch
robot_ws/src/robot_shoot/src/: main.cpp  nav_shoot.cpp  shoot_debug.cpp
robot_ws/src/robot_shoot/tasks/: nav_shoot copy.yaml  nav_shoot.yaml
robot_ws/src/robot_slam/: CMakeLists.txt
robot_ws/src/robot_slam/launch/: navigation.launch
robot_ws/src/robot_slam/launch/include/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml
robot_ws/src/robot_slam/maps/: my_lab.pgm  my_lab.yaml
robot_ws/src/robot_slam/params/carto/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml
robot_ws/src/track_tag/: CMakeLists.txt  package.xml
robot_ws/src/track_tag/launch/: ar_track_camera.launch  usb_cam_with_calibration.launch
robot_ws/src/track_tag/rviz/: ar_track_camera.rviz
(+7 files in other folders)
